dxscale/core/exceptionLogging/objects/ExceptionEvent__e/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <description>ClassName</description>
    <label>ClassName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>