dxscale/core/exceptionLogging/objects/ExceptionEvent__e/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <label>Error Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>