dxscale/core/exceptionLogging/objects/ExceptionEvent__e/fields/ExceptionCause__c.field-meta.xml
<CustomField>
    <fullName>ExceptionCause__c</fullName>
    <label>Exception Cause</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>