dxscale/core/exceptionLogging/objects/ExceptionEvent__e/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Where relevant the record Id that was processing and errored</description>
    <label>Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>