dxscale/core/exceptionLogging/objects/ExceptionEvent__e/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <label>Stack Trace</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>